--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container {
+   max-width: 950px;
+   margin: 0 auto;
+   color:#003333;
+   font-family:sans-serif;
+   padding-top:40px;
+   padding-left: 60px;
+   padding-right: 60px;
+}
