[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: script;
-    background-color: lightgrey;
+    font-family: sans-serif;
+    background-color: #ccffff;
     margin-top: 75px;
 }
 
